# DeepSpaceRacer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
gui/: CMakeLists.txt  main.cpp
lib/: engine.cpp  engine.hpp  ship.cpp  ship.hpp  thruster.cpp  thruster.hpp  units.hpp
lib/linear_algebra/: matrix.hpp
travis-scripts/: build.sh  dependencies.sh
unit_tests/: CMakeLists.txt  test_engine.cpp  test_ship.cpp  test_thruster.cpp
